--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kep",
+  "name": "keppy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,30 +7,31 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --ignore-path .gitignore --write .",
-    "clear": "rm -rf .next/"
+    "format": "prettier --write .",
+    "clean": "rm -rf .next/"
   },
   "dependencies": {
-    "classnames": "^2.3.1",
-    "firebase": "^9.6.10",
-    "next": "12.1.1",
-    "next-themes": "^0.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-modal": "^3.14.4",
-    "swr": "^1.2.2"
+    "classnames": "^2.3.2",
+    "firebase": "^9.11.0",
+    "next": "12.3.1",
+    "next-themes": "^0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-modal": "^3.15.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
+    "@types/node": "18.8.3",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
     "@types/react-modal": "^3.13.1",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.1",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.1",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3"
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.25.0",
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.4"
   }
 }
