--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keppy",
+  "name": "keep",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,27 +11,28 @@
     "clean": "rm -rf .next/"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "classnames": "^2.3.2",
-    "firebase": "^9.11.0",
-    "next": "12.3.1",
+    "firebase": "^9.21.0",
+    "next": "13.3.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-modal": "^3.15.1",
-    "swr": "^1.3.0"
+    "react-modal": "^3.16.1",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
-    "@types/node": "18.8.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "@types/react-modal": "^3.13.1",
-    "autoprefixer": "^10.4.12",
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.17",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.4"
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.2",
+    "@types/react-dom": "18.2.3",
+    "@types/react-modal": "^3.16.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.4",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "tailwindcss": "^3.3.2",
+    "typescript": "5.0.4"
   }
 }
